--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
       [
         "@semantic-release/changelog",
         {
-          "changelogFile": "docs/CHANGELOG.md"
+          "changelogFile": "CHANGELOG.md"
         }
       ],
       "@semantic-release/npm",
