--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
         {
           "assets": [
             "package-lock.json",
-            "package.json"
+            "package.json",
+            "CHANGELOG.md"
           ],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
